# SVCConverter

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  cmake_batch.sh
res/: app_res.rc
res/string/: ui_string.csv
src/: analog_value_dialog.cc  analog_value_dialog.h  analog_value_panel.cc  analog_value_panel.h  app.cc  app.h  binding_dialog.cc  binding_dialog.h  config_data.cc  config_data.h  config_dialog.cc  config_dialog.h  config_parser.cc  config_parser.h  input_manager.cc  input_manager.h  input_recorder.cc  input_recorder.h  label_string.h  main.cc  main_window.cc  main_window.h  parts.cc  parts.h  setting_parser.cc  setting_parser.h  slider_value_dialog.cc  slider_value_dialog.h  ui_string_map.h  util_function.cc  util_function.h
